tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_error_if_attribute_not_in_scope/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Attribute function `not_in_scope` is not in scope
  ┌─ src/main.nr:2:9
  │
2 │         #[not_in_scope]
  │         ---------------
  │

Aborting due to 1 previous error
