tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_error_if_attribute_not_in_scope/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attribute function `not_in_scope` is not in scope
  ┌─ src/main.nr:2:9
  │
2 │         #[not_in_scope]
  │         ---------------
  │

Aborting due to 1 previous error
